# keymap-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
captures/: Apple-Terminal_tmux-off_ssh-off_2026-05-26.toml  WezTerm_tmux-off_ssh-off_2026-05-26.toml  iTerm-app_tmux-off_ssh-off_2026-05-26.toml  tmux_tmux-on_ssh-off_2026-05-26.toml  xterm-256color_kitty-enhanced_tmux-off_ssh-off_2026-05-26.toml  xterm-256color_tmux-off_ssh-off_2026-05-26.toml  xterm-256color_tmux-off_ssh-on_2026-05-26.toml  xterm-kitty_kitty-enhanced_tmux-off_ssh-off_2026-05-26.toml  xterm-kitty_tmux-off_ssh-off_2026-05-26.toml
crates/keymap-config/: CHANGELOG.md  Cargo.toml
crates/keymap-config/examples/: load_config.rs  rebind.rs
crates/keymap-config/src/: lib.rs
crates/keymap-core/: CHANGELOG.md  Cargo.toml
crates/keymap-core/examples/: basic_lookup.rs  command_palette.rs  discovery.rs  ex_command.rs  modal_keymap.rs
crates/keymap-core/src/: cmd.rs  input.rs  keymap.rs  legacy.rs  lib.rs  passthrough.rs  rebind.rs
crates/keymap-core/src/input/: crossterm.rs  grammar.rs
crates/keymap-core/tests/: rebind_reserved.rs
crates/keymap-probe/: Cargo.toml
crates/keymap-probe/src/: main.rs
crates/keymap-seq/: CHANGELOG.md  Cargo.toml
crates/keymap-seq/examples/: leader_sequence.rs
crates/keymap-seq/src/: lib.rs  map.rs  progress.rs  timed.rs
crates/keymap-showcase/: Cargo.toml
crates/keymap-showcase/src/: lib.rs  main.rs
crates/keymap-suite/: CHANGELOG.md  Cargo.toml  README.md
crates/keymap-suite/examples/: load_and_resolve.rs
crates/keymap-suite/src/: lib.rs
crates/keymap-term/: CHANGELOG.md  Cargo.toml
crates/keymap-term/src/: decode.rs  lib.rs  reachability.rs
crates/keymap-term/tests/: capture_invariants.rs  decode_fixtures.rs  reachability_fixtures.rs
crates/keymap-tui/: Cargo.toml
crates/keymap-tui/src/: main.rs
