[workspace]
resolver = "3"
members = [
    "crates/keymap-core",
    "crates/keymap-config",
    "crates/keymap-seq",
    "crates/keymap-term",
    "crates/keymap-probe",
    "crates/keymap-tui",
    # Name-reservation placeholder; see docs/STATUS.md "Packaging retreat".
    "crates/keymap-suite",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/S-Nakamur-a/keymap-rs"
authors = ["S-Nakamur-a"]
readme = "README.md"
keywords = ["keymap", "keybinding", "terminal", "tui", "input"]
categories = ["command-line-interface", "data-structures"]

[workspace.dependencies]
# Pinned in one place so keymap-core and keymap-term agree on the version.
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Safe wrappers around poll(2) etc., so the probe can wait on stdin readiness
# without hand-rolled unsafe and without crossterm's event parser stealing bytes.
rustix = { version = "0.38", features = ["event"] }
time = { version = "0.3", features = ["formatting"] }
ratatui = "0.29"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
