[package]
name = "keymap-suite"
# Promoted from the 0.0.0 name-reservation placeholder to the first real release.
# Tracks the workspace version line going forward.
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "An opinionated facade over keymap-core / keymap-config / keymap-seq: TOML in, action out, with layer resolution and the multi-key sequence buffer wired up. The convenience layer for the nine-out-of-ten Rust TUI authors who only want one import."
keywords.workspace = true
categories.workspace = true
# Each published crate ships its own README so docs.rs and crates.io render the
# crate-specific guide rather than the workspace overview.
readme = "README.md"

[dependencies]
keymap-core = { path = "../keymap-core", version = "0.1.0" }
keymap-config = { path = "../keymap-config", version = "0.1.0" }
keymap-seq = { path = "../keymap-seq", version = "0.1.0" }

[lints]
workspace = true
