[package]
name = "keymap-term"
version = "0.0.0"
description = "Terminal capability snapshots and (future) capability-aware key decoding for keymap-rs"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
keymap-core = { path = "../keymap-core" }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
# Used only by the capture-invariant tests to validate `meta.captured_at` is a
# real RFC 3339 timestamp (the freshness signal).
time = { workspace = true, features = ["parsing"] }

[lints]
workspace = true
