[package]
name = "keymap-term"
version.workspace = true
description = "Terminal capability snapshots and (future) capability-aware key decoding for keymap-rs"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
keymap-core = { path = "../keymap-core", version = "0.1.0" }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
# Used only by the capture-invariant tests to validate `meta.captured_at` is a
# real RFC 3339 timestamp (the freshness signal).
time = { workspace = true, features = ["parsing"] }

[lints]
workspace = true
